      of findnodes when using XML::Twig::XPath (suggested by Zed Pobre)
added: indented_close_tag pretty_print option (suggested by H.Merijn Brand)
added: RT #49692 xml_split test on win 32 systems. Patch sent through RT 
       http://rt.cpan.org/Ticket/Display.html?id=49692
added: using position selector (eg foo[2]) in handler triggers now raises 
      an error, spotted by Selvakumar
fix:  RT #51432 attributes containing quote character don't escape properly
      found, and patch provided by Jeremy Kahn
      https://rt.cpan.org/Ticket/Display.html?id=51432
fix:  RT #48616 handler condition of foo/* crashed the module
      reported by Osfameron
      http://rt.cpan.org/Public/Bug/Display.html?id=48616
fix:  xml_grep bug: warning when --count is used and no match is found
      https://rt.cpan.org/Ticket/Display.html?id=33269 
      found by Hermann Peifer
fix:  xml_split bug when using an XML declaration and a utf8 encoding. Spotted
      by Chris Price.
fix:  xml_pp bug, pod2text command to display help was not properly quoted.
      Spotted by Chris Price. 
fix:  failing tests when LWP::UserAgent is not available
fix:  RT #41147: use of uninitialized value in eval when attribute isn't found
      reported by Zed Pobre
      http://rt.cpan.org/Ticket/Display.html?id=41147
fix:  memory leak when the XML included id's
fix:  XML::Twig::Elt->set_content fails when argument is 'XML::Twig::Elt'
      (or the name of a subclass of XML::Twig::Elt)
      http://rt.cpan.org/Ticket/Display.html?id=40399
fix:  bug RT #39849, set_output_encoding( 'utf-8') did not work quite right
      on filehandles that were already open in >:utf-8 mode
      spotted by Zed Pobre
      http://rt.cpan.org/Ticket/Display.html?id=39849
fix:  xml_pp now accepts all formating options available in XML::Twig
fix:  RT #31664, element attributes are not preserving their order when
      using elt->copy spotted, and fix provided by jbubbabrown